--- a/pages/calculadora/index.html
+++ b/pages/calculadora/index.html
@@ -51,7 +51,7 @@
     </header>
     <section id="screen_main">
         <div class="inputcn">
-            <input type="number" placeholder="Quantas calorias você quer perder?" id="numRo">
+            <input type="number" placeholder="Informe a quantidade de calorias a seguir" id="numRo">
             <span id="btnCalc">
                 <i class='bx bx-math'></i>
             </span>
@@ -91,17 +91,11 @@
                     </div>
                 </section>
             </div>
-            <div class="infos anm inative h-500">
+            <div class="infos anm inative h-500" id="lastBox">
                 <section>
-                    <h2><span id="num_calc"></span> Kcal:</h2>
+                    <h2>Porque acompanhar o isso?</h2>
                     <div>
-                        Controlar a quantidade de calorias é essencial para manter uma vida saudável. Primeiramente, o excesso de calorias pode levar ao ganho de peso, o que, por sua vez, está associado a várias condições de saúde, como obesidade, diabetes e doenças cardíacas.
-
-Além disso, manter um equilíbrio adequado entre a ingestão e o gasto de calorias ajuda a controlar a energia do corpo, promovendo níveis de energia estáveis ao longo do dia. Isso pode melhorar o bem-estar geral e a capacidade de realizar atividades diárias.
-
-Controlar as calorias também permite que as pessoas façam escolhas alimentares mais conscientes, optando por alimentos mais nutritivos e evitando excessos de alimentos processados e ricos em açúcares. Isso contribui para uma dieta equilibrada, que é fundamental para a saúde a longo prazo.
-
-Em resumo, controlar a quantidade de calorias é importante para evitar problemas de saúde, manter os níveis de energia e fazer escolhas alimentares mais saudáveis. É um passo fundamental para uma vida mais equilibrada e saudável.
+                        <p>Controlar a quantidade de calorias é essencial para manter uma vida saudável. Primeiramente, o excesso de calorias pode levar ao ganho de peso, o que, por sua vez, está associado a várias condições de saúde, como obesidade, diabetes e doenças cardíacas. Além disso, manter um equilíbrio adequado entre a ingestão e o gasto de calorias ajuda a controlar a energia do corpo, promovendo níveis de energia estáveis ao longo do dia. Isso pode melhorar o bem-estar geral e a capacidade de realizar atividades diárias. Controlar as calorias também permite que as pessoas façam escolhas alimentares mais conscientes, optando por alimentos mais nutritivos e evitando excessos de alimentos processados e ricos em açúcares. Isso contribui para uma dieta equilibrada, que é fundamental para a saúde a longo prazo. Em resumo, controlar a quantidade de calorias é importante para evitar problemas de saúde, manter os níveis de energia e fazer escolhas alimentares mais saudáveis. É um passo fundamental para uma vida mais equilibrada e saudável.</p>
                     </div>
                 </section>
             </div>
