FITNESS E CALC PRONTO

--- a/pages/fitness/index.html
+++ b/pages/fitness/index.html
@@ -113,5 +113,10 @@
             <span><i class='bx bxl-facebook-square'></i> @Ftpoficial</span>
         </div>
     </footer>
+    <section style="display: none;" id="absolutediv">
+        <div>
+            <i class='bx bx-arrow-back' id="btnBack"></i>
+        </div>
+    </section>
 </body>
 </html>
