Co-authored-by: Dev_ZIKI <KiraZiki@users.noreply.github.com>

--- a/pages/calculadora/index.html
+++ b/pages/calculadora/index.html
@@ -91,7 +91,7 @@
                     </div>
                 </section>
             </div>
-            <div class="infos anm inative h-500" id="lastBox">
+            <div class="infos inative h-500" id="lastBox">
                 <section>
                     <h2>Porque acompanhar o isso?</h2>
                     <div>
