--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
                 <div>
                     <div id="btnmenu" onclick="Troca_Pagina('acess')">
                         <i class='bx bxs-user' id="icon_remove"></i>
-                        <img class="img_profile" width="120%">
+                        <img class="img_profile" height="100%">
                     </div>
                     <span id="text-entry">
                         Entrar
@@ -57,8 +57,10 @@
             <div class="container-images">
                 <div class="slider on">
                     <div class="quad">
-                        <img src="resources/assets/carrosel1.png">
-                        <div class="infofo">
+                        <div class="image-slider">
+                            <img src="resources/assets/carrosel1.png">
+                        </div>
+                        <div class="info-slider">
                             <h1>Aproveite o dia.</h1>
                             <h3>Transforme minutos em perda de calorias!</h3>
                         </div>
@@ -66,8 +68,10 @@
                 </div>
                 <div class="slider">
                     <div class="quad">
-                        <img src="resources/assets/carrosel2.png">
-                        <div class="infofo">
+                        <div class="image-slider">
+                            <img src="resources/assets/carrosel2.png">
+                        </div>
+                        <div class="info-slider">
                             <h1>Coma bem.</h1>
                             <h3>Alimentação saudável traz uma mente saudável!</h3>
                         </div>
@@ -75,8 +79,10 @@
                 </div>
                 <div class="slider">
                     <div class="quad">
-                        <img src="resources/assets/carrosel3.png">
-                        <div class="infofo">
+                        <div class="image-slider">
+                            <img src="resources/assets/carrosel3.png">
+                        </div>
+                        <div class="info-slider">
                             <h1>Coma bem, viva mais.</h1>
                             <h3>Um corpo saudável requer uma alimentação saudável!</h3>
                         </div>
@@ -86,124 +92,38 @@
             <button id="next-button"><img src="resources/assets/arrow.png"></button>
         </div>
         <div class="quemsomos">
-            <header><h1>Quem Somos?</h1></header>
-            <div class="conteudo">
-                <div class="text1"><img src="resources/assets/meditacao.png">Somos a food and physical health, um site feito para ajudar as pessoas a terem uma vida saudável através de sugestões para uma boa alimentação, receitas mais saudáveis e prática de exercícios físicos.</div>
-                <div class="text2">Estamos no mercado desde 2021, por isso estamos sempre antenados aos novos costumes alimentares. O nosso objetivo é proporcionar uma maneira de obter uma vida saudável de maneira gratuita.<img src="resources/assets/frutas.png"></div>
+            <h1>Quem somos?</h1>
+            <div class="informa">
+                <p>Somos a food and physical health, um site feito para ajudar as pessoas a terem uma vida saudável através de sugestões para uma boa alimentação, receitas mais saudáveis e prática de exercícios físicos.</p>
+                <p>Estamos no mercado desde 2021, por isso estamos sempre antenados aos novos costumes alimentares. O nosso objetivo é proporcionar uma maneira de obter uma vida saudável de maneira gratuita.</p>
             </div>
         </div>
         <div class="sobreplat">
-            <div class="infoleft">
-                <header><b>Sobre a plataforma</b></header>
-                <div class="sobre">
-                    <div class="infos"><img src="resources/images/exercicio.jpg">sugestões de exercícios físicos</div>
-                    <div class="infos"><img src="resources/images/rede.jpg">Rede social própria</div>
-                    <div class="infos"><img src="resources/images/refeicao.png">Calculadora de calorias</div>
-                    <div class="infos"><img src="resources/images/medico.jpg">Informação sobre doenças</div>
-                    <div class="infos"><img src="resources/images/alimentacao.jpg">Dicas para alimentação balanceada</div>
+            <h1>Sobre a plataforma</h1>
+            <div class="infoe">
+                <div class="box">
+                    <div class="img"><img src="" alt=""></div>
+                    <div class="textes"></div>
+                </div>
+                <div class="box">
+                    <div class="img"><img src="" alt=""></div>
+                    <div class="textes"></div>
+                </div>
+                <div class="box">
+                    <div class="img"><img src="" alt=""></div>
+                    <div class="textes"></div>
+                </div>
+                <div class="box">
+                    <div class="img"><img src="" alt=""></div>
+                    <div class="textes"></div>
+                </div>
+                <div class="box">
+                    <div class="img"><img src="" alt=""></div>
+                    <div class="textes"></div>
                 </div>
             </div>
-            <div class="inforight">
-                <div class="imagens">
-                    <img src="resources/images/salada.jpg" class="img1">
-                    <img src="resources/images/meditar.jpg" class="img2">
-                </div>
-            </div>
-        </div>
-        <div class="receitas">
-            <header><h1>Receitas saudáveis</h1></header>
-            <div class="receita">
-                <div class="receit">
-                    <p>Suco verde</p>
-                    <div class="recei">
-                        <ul>
-                            <li>Refrescante</li>
-                            <li>Saudável</li>
-                        </ul>
-                        <img src="resources/images/suco.jpg" class="imgsuco1">
-                    </div>
-                </div>
-                <div class="receit">
-                    <p>Suco verde</p>
-                    <div class="recei">
-                        <ul>
-                            <li>Refrescante</li>
-                            <li>Saudável</li>
-                        </ul>
-                        <img src="resources/images/suco.jpg" class="imgsuco1">
-                    </div>
-                </div>
-                <div class="receit">
-                    <p>Suco verde</p>
-                    <div class="recei">
-                        <ul>
-                            <li>Refrescante</li>
-                            <li>Saudável</li>
-                        </ul>
-                        <img src="resources/images/suco.jpg" class="imgsuco1">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="ceo">
-            <header>Usuários satisfeitos</header>
-            <div class="ceos">
-                <div class="ceoss">
-                    <div class="fotoceo"><img src="resources/Ceosphoto/daniel.jpg" class="a"></div>
-                    <div class="caxavd">
-                        <p>Daniel</p>
-                        <p>CEO da Startup</p>
-                    </div>
-                    <div class="depoimento"><p>Depoimentos são frases curtas das pessoas que curtem sua marca. É uma ótima forma de convencer os clientes a experimentar seus serviços.</p></div> 
-                </div>
-                <div class="ceoss">
-                    <div class="fotoceo"><img src="resources/Ceosphoto/JP.jpg" class="a"></div>
-                    <div class="caxavd">
-                        <p>João Pedro</p>
-                        <p>Executivo</p>
-                    </div>
-                    <div class="depoimento"><p>Depoimentos são frases curtas das pessoas que curtem sua marca. É uma ótima forma de convencer os clientes a experimentar seus serviços.</p></div>
-                </div>
-                <div class="ceoss">
-                    <div class="fotoceo"><img src="resources/Ceosphoto/manoela.jpg" class="a"></div>
-                    <div class="caxavd">
-                        <p>Manoela</p>
-                        <p>Empreendedora</p>
-                    </div>
-                    <div class="depoimento"><p>Depoimentos são frases curtas das pessoas que curtem sua marca. É uma ótima forma de convencer os clientes a experimentar seus serviços.</p></div>
-                </div>
-            </div>
-        </div>
-        <div class="redes">
-            <div class="psocial"><img src=""><h1>Retire esta frase e adicione a imagem!</h1></div>
-            <div class="mensagem">
-                <div class="mensagemen">
-                    <div class="mensagemmensagem">
-                        <h1>Rede Social</h1>
-                        <h1>Integrada</h1>
-                        <h2>Junte-se a nós na busca por uma vida mais saudável.</h2>
-                        <h2>Conecte-se, compartilhe e transforme-se!</h2>
-                        <img src="resources/assets/celula.png">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer">
-            <div class="imagems">
-                <img src="resources/assets/saudavel.jpg">
-                <img src="resources/assets/correndo.jpg">
-            </div>
-            <div class="informacoes">
-                <div class="top">
-                    <h1>Para contato</h1>
-                    <h3>Rua João Ântonio Sanches, 482, Presidente Prudente - SP</h3>
-                    <h4>(18) 1000-8489</h4>
-                </div>
-                <div class="bot">
-                    <div class="git"><img src="resources/assets/git.png">fph@foodpsysicalhealth.com</div>
-                    <div class="insta"><p><img src="resources/assets/insta.png">@FPH</p></div>
-                    <div class="face"><p><img src="resources/assets/facebook.png">FoodPsysicalHealth</p></div>
-                </div>
+            <div class="infod">
+
             </div>
         </div>
     </div>
