--- a/pages/alimentos/index.html
+++ b/pages/alimentos/index.html
@@ -50,10 +50,11 @@
         </div>
     </header>
     <div class="screen1">
-        <div id="carrosel"></div>
-            <div id="container on"><img src="../../resources/assets/refeicao.jpg" alt="Imagem de refeição completa"></div>
-            <div id="container"><img src="../../resources/assets/sanduiche.jpg" alt="Imagem de lanches naturais"></div>
-            <div id="container"><img src="../../resources/assets/alintegrais.png" alt="Imagem de alimentos integrais"></div>
+        <div id="carrosel">
+            <div id="container" class="slider on"><img src="../../resources/assets/refeicao.jpg" alt="Imagem de refeição completa"></div>
+            <div id="container" class="slider "><img src="../../resources/assets/sanduiche.jpg" alt="Imagem de lanches naturais"></div>
+            <div id="container" class="slider"><img src="../../resources/assets/alintegrais.png" alt="Imagem de alimentos integrais"></div>
+        </div>
     </div>
     <div class="doencas1">
         <h1>Alimente-se devagar</h1>
