Co-authored-by: Dev_ZIKI <KiraZiki@users.noreply.github.com>

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                 </nav>
             </div>
             <div class="midside">
-                <img src="./resources/assets/logo.png" width="20%">
+                <img src="./resources/assets/logo.png" class="imglogo">
             </div>
             <div class="rightside">
                 <div>
@@ -99,31 +99,50 @@
             </div>
         </div>
         <div class="sobreplat">
-            <h1>Sobre a plataforma</h1>
             <div class="infoe">
                 <div class="box">
-                    <div class="img"><img src="" alt=""></div>
-                    <div class="textes"></div>
+                    <div class="imgs"><img src="resources/images/exercicio.jpg" alt="Imagem sobre exercicio"></div>
+                    <div class="textes">sugestões de exercícios físicos</div>
                 </div>
                 <div class="box">
-                    <div class="img"><img src="" alt=""></div>
-                    <div class="textes"></div>
+                    <div class="imgs"><img src="resources/images/rede.jpg" alt="imagem sobre rede social"></div>
+                    <div class="textes">Rede social própria</div>
                 </div>
                 <div class="box">
-                    <div class="img"><img src="" alt=""></div>
-                    <div class="textes"></div>
+                    <div class="imgs"><img src="resources/images/refeicao.png" alt="Imagem sobre refeição"></div>
+                    <div class="textes">Calculadora de calorias</div>
                 </div>
                 <div class="box">
-                    <div class="img"><img src="" alt=""></div>
-                    <div class="textes"></div>
+                    <div class="imgs"><img src="resources/images/medico.jpg" alt="Imagem sobre médico"></div>
+                    <div class="textes">Informação sobre doenças</div>
                 </div>
                 <div class="box">
-                    <div class="img"><img src="" alt=""></div>
-                    <div class="textes"></div>
+                    <div class="imgs"><img src="resources/images/alimentacao.jpg" alt="Imagem sobre alimentação"></div>
+                    <div class="textes">Alimentação balanceada</div>
                 </div>
             </div>
             <div class="infod">
-
+                <img src="resources/images/salada.jpg" alt="Imagem de salada" class="img1"> 
+                <div class="quadv"></div>
+                <img src="resources/images/meditar.jpg" alt="Imagem de meditação" class="img2">
+            </div>
+        </div>
+        <div class="receitas">
+            <h1 class="hrece">Receitas saudáveis</h1>
+            <div class="quadreceita">
+                <div class="sucovd">
+                    <img src="resources/images/suco.jpg" alt="Imagem do Suco Verde" class="imgre">
+                    <label class="labelre">Suco Verde</label>
+                    
+                </div>
+                <div class="sucoaba">
+                    <img src="resources/images/" alt="Imagem do Suco de Abacate" class="imgre">
+                    <label class="labelre">Suco de Abacate</label>
+                </div>
+                <div class="frangoleg">
+                    <img src="resources/images/" alt="Imagem de Frango com Legumes" class="imgre">
+                    <label class="labelre">Frango com Legumes</label>
+                </div>
             </div>
         </div>
     </div>
