--- a/pages/fitness/index.html
+++ b/pages/fitness/index.html
@@ -100,7 +100,7 @@
             </a>
             <a href="https://github.com/Ma2903" target="_blank">
                 <i class='bx bxl-github'></i>
-                <span>Manoela Silva Pinheiro</span>
+                <span>Manoela Pinheiro Da Silva</span>
             </a>
             <a href="https://github.com/KiraZiki" target="_blank">
                 <i class='bx bxl-github'></i>
