--- a/pages/calculadora/index.html
+++ b/pages/calculadora/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="infos inative h-500" id="lastBox">
                 <section>
-                    <h2>Porque acompanhar o isso?</h2>
+                    <h2>Porque acompanhar isto?</h2>
                     <div>
                         <p>Controlar a quantidade de calorias é essencial para manter uma vida saudável. Primeiramente, o excesso de calorias pode levar ao ganho de peso, o que, por sua vez, está associado a várias condições de saúde, como obesidade, diabetes e doenças cardíacas. Além disso, manter um equilíbrio adequado entre a ingestão e o gasto de calorias ajuda a controlar a energia do corpo, promovendo níveis de energia estáveis ao longo do dia. Isso pode melhorar o bem-estar geral e a capacidade de realizar atividades diárias. Controlar as calorias também permite que as pessoas façam escolhas alimentares mais conscientes, optando por alimentos mais nutritivos e evitando excessos de alimentos processados e ricos em açúcares. Isso contribui para uma dieta equilibrada, que é fundamental para a saúde a longo prazo. Em resumo, controlar a quantidade de calorias é importante para evitar problemas de saúde, manter os níveis de energia e fazer escolhas alimentares mais saudáveis. É um passo fundamental para uma vida mais equilibrada e saudável.</p>
                     </div>
@@ -111,7 +111,7 @@
             </a>
             <a href="https://github.com/Ma2903" target="_blank">
                 <i class='bx bxl-github'></i>
-                <span>Manoela Silva Pinheiro</span>
+                <span>Manoela Pinheiro Da Silva</span>
             </a>
             <a href="https://github.com/KiraZiki" target="_blank">
                 <i class='bx bxl-github'></i>
