--- a/public/index.html
+++ b/public/index.html
@@ -130,18 +130,43 @@
         <div class="receitas">
             <h1 class="hrece">Receitas saudáveis</h1>
             <div class="quadreceita">
-                <div class="sucovd">
+                <div class="quadre">
                     <img src="resources/images/suco.jpg" alt="Imagem do Suco Verde" class="imgre">
                     <label class="labelre">Suco Verde</label>
-                    
                 </div>
-                <div class="sucoaba">
-                    <img src="resources/images/" alt="Imagem do Suco de Abacate" class="imgre">
+                <div class="quadre">
+                    <img src="resources/assets/sucoaba.png" alt="Imagem do Suco de Abacate" class="imgre">
                     <label class="labelre">Suco de Abacate</label>
                 </div>
-                <div class="frangoleg">
-                    <img src="resources/images/" alt="Imagem de Frango com Legumes" class="imgre">
+                <div class="quadre">
+                    <img src="resources/assets/frangolegumes.jpg" alt="Imagem de Frango com Legumes" class="imgre">
                     <label class="labelre">Frango com Legumes</label>
+                </div>
+            </div>
+        </div>
+        <div class="ceos">
+            <h1 class="hceo">CEOS do  projeto</h1>
+            <div class="quadceo">
+                <div class="ceo">
+                    <img src="resources/Ceosphoto/daniel.jpg" alt="Foto do ceo Daniel" class="fotoceo">
+                    <div class="label">
+                        <label class="nomeceo">Daniel</label>
+                        <label class="statusceo">Dev Front-End</label>
+                    </div>
+                </div>
+                <div class="ceo">
+                    <img src="resources/Ceosphoto/JP.jpg" alt="Foto do ceo João Pedro" class="fotoceo">
+                    <div class="label">
+                        <label class="nomeceo">João Pedro</label>
+                        <label class="statusceo">Dev Back-End</label>
+                    </div>    
+                </div>
+                <div class="ceo">
+                    <img src="resources/Ceosphoto/manoela.jpg" alt=" Foto do ceo Manoela" class="fotoceo">
+                    <div class="label">
+                        <label class="nomeceo">Manoela</label>
+                        <label class="statusceo">Documentação</label>
+                    </div>
                 </div>
             </div>
         </div>
