--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
                             <img src="resources/assets/carrosel1.png">
                         </div>
                         <div class="info-slider">
-                            <h1>Aproveite o dia.</h1>
+                            <h1>Aproveite o dia!</h1>
                             <h3>Transforme minutos em perda de calorias!</h3>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                             <img src="resources/assets/carrosel2.png">
                         </div>
                         <div class="info-slider">
-                            <h1>Coma bem.</h1>
+                            <h1>Coma bem!</h1>
                             <h3>Alimentação saudável traz uma mente saudável!</h3>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                             <img src="resources/assets/carrosel3.png">
                         </div>
                         <div class="info-slider">
-                            <h1>Coma bem, viva mais.</h1>
+                            <h1>Coma bem, viva mais!</h1>
                             <h3>Um corpo saudável requer uma alimentação saudável!</h3>
                         </div>
                     </div>
