--- a/public/index.html
+++ b/public/index.html
@@ -101,23 +101,23 @@
         <div class="sobreplat">
             <div class="infoe">
                 <div class="box">
-                    <div class="imgs"><img src="resources/images/exercicio.jpg" alt="Imagem sobre exercicio"></div>
+                    <div class="imgs"><img src="resources/images/exercicio.jpg" alt="Imagem sobre exercicio" class="imgsobre"></div>
                     <div class="textes">sugestões de exercícios físicos</div>
                 </div>
                 <div class="box">
-                    <div class="imgs"><img src="resources/images/rede.jpg" alt="imagem sobre rede social"></div>
+                    <div class="imgs"><img src="resources/images/rede.jpg" alt="imagem sobre rede social" class="imgsobre"></div>
                     <div class="textes">Rede social própria</div>
                 </div>
                 <div class="box">
-                    <div class="imgs"><img src="resources/images/refeicao.png" alt="Imagem sobre refeição"></div>
+                    <div class="imgs"><img src="resources/images/refeicao.png" alt="Imagem sobre refeição" class="imgsobre"></div>
                     <div class="textes">Calculadora de calorias</div>
                 </div>
                 <div class="box">
-                    <div class="imgs"><img src="resources/images/medico.jpg" alt="Imagem sobre médico"></div>
+                    <div class="imgs"><img src="resources/images/medico.jpg" alt="Imagem sobre médico" class="imgsobre"></div>
                     <div class="textes">Informação sobre doenças</div>
                 </div>
                 <div class="box">
-                    <div class="imgs"><img src="resources/images/alimentacao.jpg" alt="Imagem sobre alimentação"></div>
+                    <div class="imgs"><img src="resources/images/alimentacao.jpg" alt="Imagem sobre alimentação" class="imgsobre"></div>
                     <div class="textes">Alimentação balanceada</div>
                 </div>
             </div>
@@ -133,14 +133,42 @@
                 <div class="quadre">
                     <img src="resources/images/suco.jpg" alt="Imagem do Suco Verde" class="imgre">
                     <label class="labelre">Suco Verde</label>
+                    <label class="off">
+                        <p>1 folha grande de couve</p>
+                        <p>1 limão</p>
+                        <p>1 maçã</p>
+                        <p>1/2 pepino</p>
+                        <p>gengibre (a gosto)</p>
+                        <p>hortelã (a gosto)</p>
+                        <p>1 colher de sopa de linhaça</p>
+                        <p>1 colher de sopa de mel</p>
+                        <p>250 ml de água</p>
+                    </label>
                 </div>
                 <div class="quadre">
                     <img src="resources/assets/sucoaba.png" alt="Imagem do Suco de Abacate" class="imgre">
                     <label class="labelre">Suco de Abacate</label>
+                    <label class="off">
+                        <p>1 abacate</p>
+                        <p>1 litro de água ou leite se caso preferir gelados</p>
+                        <p>Açúcar ou adoçante (a gosto)</p>
+                    </label>
                 </div>
                 <div class="quadre">
                     <img src="resources/assets/frangolegumes.jpg" alt="Imagem de Frango com Legumes" class="imgre">
                     <label class="labelre">Frango com Legumes</label>
+                    <label class="off">
+                        <p>1 peito de frango</p>
+                        <p>1 cenoura</p>
+                        <p>1 pimentão</p>
+                        <p>1 cebola</p>
+                        <p>1 tomate</p>
+                        <p>2 alhos</p>
+                        <p>1 sachê de tempero especial para legumes</p>
+                        <p>1 pitada de tempero em pó curry</p>
+                        <p>salsinha (a gosto)</p>
+                        <p>sal e vinagre(a gosto)</p>
+                    </label>
                 </div>
             </div>
         </div>
@@ -170,6 +198,29 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <img src="../../resources/assets/logo_text.png" width="20%">
+            <div class="lista">
+                <h3>Desenvolvedores:</h6>
+                <a href="https://github.com/JP1005YT" target="_blank">
+                    <i class='bx bxl-github'></i>
+                    <span>João Pedro Girotto</span>
+                </a>
+                <a href="https://github.com/Ma2903" target="_blank">
+                    <i class='bx bxl-github'></i>
+                    <span>Manoela Pinheiro Da Silva</span>
+                </a>
+                <a href="https://github.com/KiraZiki" target="_blank">
+                    <i class='bx bxl-github'></i>
+                    <span>Daniel José Dantas</span>
+                </a>
+            </div>
+            <div class="lista">
+                <h3>Contatos</h3>
+                <span><i class='bx bxl-instagram-alt' ></i> @Ftpoficial</span>
+                <span><i class='bx bxl-facebook-square'></i> @Ftpoficial</span>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
