--- a/pages/alimentos/index.html
+++ b/pages/alimentos/index.html
@@ -51,6 +51,8 @@
     </header>
     <div class="screen1">
         <div id="carrosel">
+            <i class='bx bx-chevron-left left' onclick="troca(true)"></i>
+            <i class='bx bx-chevron-right right'></i>
             <div id="container" class="slider on">
                 <div class="refeicao"></div>
                 <img src="../../resources/assets/refeicao.jpg" alt="Imagem de refeição completa">
@@ -144,6 +146,29 @@
             <img src="../../resources/assets/refeicoes.jpg" alt="Imagem sobre refeições">
         </section>
     </div>
+    <footer>
+        <img src="../../resources/assets/logo_text.png" width="20%">
+        <div class="lista">
+            <h3>Desenvolvedores:</h6>
+            <a href="https://github.com/JP1005YT" target="_blank">
+                <i class='bx bxl-github'></i>
+                <span>João Pedro Girotto</span>
+            </a>
+            <a href="https://github.com/Ma2903" target="_blank">
+                <i class='bx bxl-github'></i>
+                <span>Manoela Pinheiro Da Silva</span>
+            </a>
+            <a href="https://github.com/KiraZiki" target="_blank">
+                <i class='bx bxl-github'></i>
+                <span>Daniel José Dantas</span>
+            </a>
+        </div>
+        <div class="lista">
+            <h3>Contatos</h3>
+            <span><i class='bx bxl-instagram-alt' ></i> @FPHoficial</span>
+            <span><i class='bx bxl-facebook-square'></i> @FPHoficial</span>
+        </div>
+    </footer>
     <script src='main.js'></script>
 </body>
 </html>
