--- a/pages/fitness/index.html
+++ b/pages/fitness/index.html
@@ -109,8 +109,8 @@
         </div>
         <div class="lista">
             <h3>Contatos</h3>
-            <span><i class='bx bxl-instagram-alt' ></i> @Ftpoficial</span>
-            <span><i class='bx bxl-facebook-square'></i> @Ftpoficial</span>
+            <span><i class='bx bxl-instagram-alt' ></i> @FPHoficial</span>
+            <span><i class='bx bxl-facebook-square'></i> @FPHoficial</span>
         </div>
     </footer>
     <section style="display: none;" id="absolutediv">
