--- a/public/index.html
+++ b/public/index.html
@@ -217,8 +217,8 @@
             </div>
             <div class="lista">
                 <h3>Contatos</h3>
-                <span><i class='bx bxl-instagram-alt' ></i> @Ftpoficial</span>
-                <span><i class='bx bxl-facebook-square'></i> @Ftpoficial</span>
+                <span><i class='bx bxl-instagram-alt' ></i> @FPHoficial</span>
+                <span><i class='bx bxl-facebook-square'></i> @FPHoficial</span>
             </div>
         </footer>
     </div>
