--- a/public/index.html
+++ b/public/index.html
@@ -186,7 +186,7 @@
                     <img src="resources/Ceosphoto/JP.jpg" alt="Foto do ceo João Pedro" class="fotoceo">
                     <div class="label">
                         <label class="nomeceo">João Pedro</label>
-                        <label class="statusceo">Dev Back-End</label>
+                        <label class="statusceo">Dev Full-Stack</label>
                     </div>    
                 </div>
                 <div class="ceo">
