--- a/pages/doencas/index.html
+++ b/pages/doencas/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Aki</title>
+    <title>FPH | Doenças</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -51,8 +51,8 @@
     </header>
     <div class="main">
         <img src="../../resources/assets/homemdoente.jpg" alt="Pessoa Doente" class="imgmain">
-        <div class="mai"><h1>Doenças relacionadas à má alimentação</h1></div>
     </div>
+    <h1>Doenças relacionadas à má alimentação</h1>
     <div class="submain">
         <div class="text">
             <p> Muitas doenças estão relacionadas a uma má alimentação que é composta basicamente de dois aspectos principais: A falta ou a pouca ingestão dos alimentos essenciais para a saúde na dieta alimentar, como legumes, verduras, frutas, cereais e grãos e o excesso de consumo de alimentos nocivos, entre eles as gorduras, o açúcar e o sal.</p>
