--- a/pages/alimentos/index.html
+++ b/pages/alimentos/index.html
@@ -49,6 +49,7 @@
             </div>
         </div>
     </header>
+    <h1 class="titulo">Como obter uma alimentação saudável</h1>
     <div class="screen1">
         <div id="carrosel">
             <i class='bx bx-chevron-left left' onclick="troca(true)"></i>
