--- a/public/index.html
+++ b/public/index.html
@@ -173,6 +173,19 @@
                 </div>
             </div>
         </div>
+        <div class="socialpoint">
+            <div>
+                <section class="image"></section>
+            </div>
+            <div>
+                <section><br><br><br>
+                    <h1>Rede Social Integrada</h1><br>
+                    <h3>Junte-se a nós na busca por uma vida mais saudavel , Conecte-se , Compartilhe</h3><br>
+                    <i class='bx bx-share-alt' style="font-size: 200px;"></i>
+                </section>
+            </div>
+        </div>
+        </div>
         <footer>
             <img src="../../resources/assets/logo_text.png" width="20%">
             <div class="lista">
